<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_nav_contact2"
            android:title="@string/nav_contact"
            app:showAsAction="never" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_nav_about_us"
            android:title="@string/nav_about_us"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/outline_article_24"
            android:title="@string/articles"
            app:showAsAction="never" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_nav_faq"
            android:title="@string/nav_faq"
            app:showAsAction="never" />
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/outline_teams_24"
            android:title="@string/teams"
            app:showAsAction="never"/>
    </group>
</menu>