<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    tools:context=".activities.ActivitySignUp">
    <ImageView
        android:id="@+id/activity_sign_up_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="90dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_dsc"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/developer_students_club"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/university"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/activity_sign_up_username_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_user"
            app:tint="@color/colorLogin"
            />

        <EditText
            android:id="@+id/activity_sign_up_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/activity_sign_up_username_icon"
            android:backgroundTint="@color/primary_grey"
            android:ems="10"
            android:hint="@string/enter_your_username"
            android:inputType="textPersonName" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/activity_sign_up_password_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_padlock"
            app:tint="@color/colorLogin" />

        <EditText
            android:id="@+id/activity_sign_up_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/activity_sign_up_password_icon"
            android:backgroundTint="@color/primary_grey"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />

    </RelativeLayout>


    <Button
        android:id="@+id/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/log_in"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:text="@string/valid_credential"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLogin"
            android:text="@string/don_t_have_an_account"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/activity_sign_up_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/register_here"
            android:textColor="@color/colorLogin"
            android:textStyle="bold"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/made_with"
                android:textStyle="bold"
                android:layout_marginEnd="6dp"
                android:textSize="18sp"
                android:textColor="@color/colorLogin"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_favorite_24" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/made_by_gdsc_upt_team"
                android:textStyle="bold"
                android:textColor="@color/colorLogin"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>