<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curve_shape">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/curve_shape"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/faq_add_image"/>

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                    <EditText
                        android:id="@+id/faq_add_question"
                        android:layout_width="300dp"
                        android:backgroundTint="@color/grey"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/question"
                        android:textColorHint="@color/grey"
                        android:inputType="text"/>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                    <EditText
                        android:id="@+id/faq_add_answer"
                        android:layout_width="300dp"
                        android:backgroundTint="@color/grey"
                        android:textColorHint="@color/grey"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/answer"
                        android:inputType="text"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/faq_add_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorHeart"
                    android:text="" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/faq_add_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textAllCaps="false"
                        android:background="@drawable/curve_shape"
                        android:backgroundTint="@color/blue_light"
                        android:padding="15dp"
                        android:textColor="@color/black"
                        android:text="@string/faq_add"
                        android:textSize="20sp" />
                </RelativeLayout>
            </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>