<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/curve_shape">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/faq_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_white"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/faq_view_question"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/dark_white"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <TextView
        android:id="@+id/faq_view_answer"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/dark_white"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <TextView
        android:id="@+id/faq_delete_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorHeart"
        android:layout_marginBottom="20dp"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/faq_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:background="@drawable/curve_shape"
            android:backgroundTint="@color/colorHeart"
            android:padding="15dp"
            android:visibility="visible"
            android:textColor="@color/black"
            android:text="@string/faq_delete"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/faq_delete_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:textAllCaps="false"
            android:visibility="gone"
            android:background="@drawable/curve_shape"
            android:backgroundTint="@color/colorHeart"
            android:padding="15dp"
            android:textColor="@color/black"
            android:text="@string/no"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/faq_delete_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:visibility="gone"
            android:textAllCaps="false"
            android:background="@drawable/curve_shape"
            android:backgroundTint="@color/colorHeart"
            android:padding="15dp"
            android:textColor="@color/black"
            android:text="@string/yes"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>